--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Soul collection</title>
-    <link rel="stylesheet" href="styles/main.css" />
+    <title>Vite + React + TS</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Soul collection</h1>
-      <p>Test page</p>
-      <button onclick="testJavascript()">Test Javascript</button>
-    </div>
-    <script>
-      function testJavascript() {
-        alert("Test Javascript");
-      }
-    </script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
