--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/IMG_9325.PNG" />
+    <link rel="icon" type="image/png" href="/src/assets/sam_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>𝚂 𝚘 𝚞 𝚕ㅤ𝚌 𝚘 𝚕 𝚕 𝚎 𝚌 𝚝 𝚒 𝚘 𝚗</title>
     <!-- Start Single Page Apps for GitHub Pages -->
