--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/src/assets/sam_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&family=Playpen+Sans:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>𝚂 𝚘 𝚞 𝚕ㅤ𝚌 𝚘 𝚕 𝚕 𝚎 𝚌 𝚝 𝚒 𝚘 𝚗</title>
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
