--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&family=Playpen+Sans:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Comic+Relief&display=swap"
       rel="stylesheet"
     />
     <title>𝚂 𝚘 𝚞 𝚕ㅤ𝚌 𝚘 𝚕 𝚕 𝚎 𝚌 𝚝 𝚒 𝚘 𝚗</title>
