--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Comic+Relief&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>𝚂 𝚘 𝚞 𝚕ㅤ𝚌 𝚘 𝚕 𝚕 𝚎 𝚌 𝚝 𝚒 𝚘 𝚗</title>
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
